--- a/templates/layout/base.jade
+++ b/templates/layout/base.jade
@@ -21,7 +21,7 @@ html
 
 	body(id='page-' + page)
 		#wrap
-			nav(role='navigation')#header.navbar.navbar-default.navbar-static-top: .container
+			nav(role='navigation')#header.navbar.navbar-default.navbar-fixed-top: .container
 				a(href=backUrl).navbar-backtobrand.hidden-xs: span.ion-arrow-left-c
 				.navbar-header
 					button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-headernav-collapse')
@@ -59,6 +59,7 @@ html
 							each navList in section.lists
 								li(class=navList.key == list.key ? 'active' : null): a(href='/keystone/' + navList.path)= navList.label
 			#body: .container
+				div(style="height:3rem")
 				block intro
 				+flash-messages(messages)
 				block content
